# neo-vimwiki-extra

./: Cargo.toml  README.md
src/: main.rs  vimwiki_rename_link.rs
