[package]
name = "neo-vimwiki-extra"
version = "0.1.0"
authors = ["hui <ihulufei@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neovim-lib = "0.6.1"
regex = "1.3.7"
anyhow = "1.0.28"
fehler = "1.0.0"
lazy_static = "1.4.0"
path-clean = "0.1.0"
pathdiff = "0.2.0"
